2013-11-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/groups/configure_group.php, godmode/groups/group_list.php:
	fixed the show and edit groups with the ACL of the user has not
	access to the parent.

2013-11-20  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/events.php: Fix new events load condition
	to be loaded only when down scroll

2013-11-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed visual console links
	to other visual consoles when there are alert fired on them
	for bug #391

2013-11-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/reporting/reporting_builder.php,
	  include/functions_groups.php,
	  include/functions_users.php: Reverted changes for TSOL. Will be merged
	  after the 5.0SP1 release.

2013-11-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/config_process.php: added lost line about the autorefresh.
	
	* include/functions_html.php: re-fixed the images from metaconsole.

2013-11-19  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.build_query.php: Fixed a
	subquery OR condition for not normal type.

	* operation/agentes/status_monitor.php: Fixed monitor
	filter by group and tags

	* mobile/operation/events.php: Fixed filter of events 
	view in mobile console

2013-11-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_groups.php
	  include/functions_users.php: Fix combo groups.

2013-11-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fix filter groups
	of reports.

2013-11-18  Sergio Martin <sergio.martin@artica.es>

	* images/status_sets/default/server_ok.png: Change the
	server OK status image to be the same style than 
	server down. Incident #392

2013-11-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed status
	of visual map items when have a fired alert for
	incident #391

2013-11-15  Vanessa Gil <vanessa.gil@artica.es>
